<resources>
    <string name="app_name">Eldalell</string>
    <string name="phone_number_or_email">Phone number or Email</string>
    <string name="registration">Registration</string>
    <string name="business_type">Business Type</string>
    <string name="password"><u>Forget Password!</u></string>
    <string name="account"><u>Don"'"t Have Account Sign Up?</u></string>
    <string name="registerFirstName">First Name</string>
    <string name="registerLastName">Last Name</string>
    <string name="registerEmail">E-mail</string>
    <string name="registerPassword">Password</string>
    <string name="registerConfirmPassword">Confirm Password</string>
    <string name="registerPhone">Phone Number</string>
    <string name="register">Sign up</string>
    <string name="privacy">By signing up, you agree to our
 Terms and Data Policy.</string>
    <string name="RegisterPickGender">Pick your Gender</string>
    <string name="selectDate">DD-MM-YYYY</string>
    <string name="selectCity">Select your Address</string>
    <string name="shopType">Shop Type</string>
    <string name="allShops">All</string>
    <string name="shopBack">shop back ground</string>
    <string name="shopDetails">Buy online at Egypt"'"s most trusted
 retail brand. Get the
best prices "&amp;" discounts </string>
    <string name="filter">Filter</string>
    <string name="AccountInfo">Account Info</string>
    <string name="SavedAddresses">Saved Addresses</string>
    <string name="MyOrders">Orders History</string>
    <string name="joinUs">Join Us</string>
    <string name="signUpVendor">Submit</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="logout">Log out</string>
    <string name="Goodbye">See you soon</string>
    <string name="vendorCallTime">The Best Time To Call You</string>
    <string name="vendorAddress">Address with details</string>
    <string name="vendorPhone">Phone Number</string>
    <string name="vendorOwner">Owner Name</string>
    <string name="vendorBusiness">Business Name</string>
    <string name="city1">City</string>
    <string name="district1">District</string>
    <string name="search">Search</string>
    <string name="chooseAddress">Choose Area</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="title">Carrefour-Maadi</string>
    <string name="yourOrder">Your Order</string>
    <string name="price">10.00 EGP</string>
    <string name="policy">Privacy Policy</string>
    <string name="signUpV">Become Vendor in ElDalell</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="savedAddress">Saved Addresses</string>

    <string name="addresses">Addresses</string>
    <string name="country">Country</string>
    <string name="countryBold">country:" "</string>
    <string name="government">City:" "</string>
    <string name="govermentdetils">Goverment</string>
    <string name="district">District:" "</string>
    <string name="districtdetils">District</string>
    <string name="street">Street:" "</string>
    <string name="streetdetils">Street</string>
    <string name="building">Building:" "</string>
    <string name="buildingdetils">Building</string>
    <string name="floor">Floor: </string>
    <string name="floordetils">Floor</string>
    <string name="apartment_no">Apartment No.:" "</string>
    <string name="apartment_nodetils">Apartment No.</string>
    <string name="mobile_number">Mobile Num:" "</string>
    <string name="login">Login</string>
    <string name="no_of_items">No. Of Items:</string>
    <string name="_5">5</string>
    <string name="total_price">Total Price :</string>
    <string name="_154_5_egp">154.5 EGP</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="rate_and_feedback">Rate &amp; Feedback</string>
    <string name="addaddress">AddAddress</string>
    <string name="district_address">District</string>
    <string name="city_address">City</string>
    <string name="street_address">Street</string>
    <string name="building_number_address">Building number</string>
    <string name="floor_number_address">Floor number</string>
    <string name="apartment_number_address">Apartment number</string>
    <string name="subject_address">Address Subject (Home,Jop,....)</string>
    <string name="add_address">Add Address</string>
    <string name="Edit_info">Edit info</string>
    <string name="enter_password_only_if_you_want_to_change_password">Enter Password Only if you want to change Password</string>

</resources>
