<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.VendorFragment"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_margin="25dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/etVendorBusinessName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_shape"
        android:hint="@string/vendorBusiness"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/etVendorOwnerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_shape"
        android:hint="@string/vendorOwner"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/rectangle_shape"
        android:id="@+id/etVendorPhoneNumber"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/vendorPhone"
        android:inputType="phone"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        tools:ignore="Autofill,RtlSymmetry" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:background="@drawable/rectangle_shape"
        android:layout_gravity="center"
        android:id="@+id/etVendorBusinessType"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/business_type"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etVendorAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_shape"
        android:hint="@string/vendorAddress"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"

        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:inputType="text"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/rectangle_shape"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:paddingStart="6dp"
        android:id="@+id/etVendorBestTimeToCall"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/vendorCallTime"
        android:inputType="time"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        tools:ignore="Autofill,RtlSymmetry" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="13dp"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textAllCaps="false"
        android:text="@string/signUpVendor"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>