<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Fragments.AddAddressFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/addAddressFragmentProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <LinearLayout
                android:id="@+id/addAddressFragmentLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvAddAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_address"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etAddressSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:hint="@string/subject_address"
                    android:inputType="text"
                    tools:ignore="Autofill" />

                <AutoCompleteTextView
                    android:id="@+id/etAddressCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:drawableEnd="@drawable/ic_down_black"
                    android:gravity="center"
                    android:hint="@string/city1"
                    android:padding="15dp"
                    android:textSize="16sp" />

                <AutoCompleteTextView
                    android:id="@+id/etAddressDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:drawableEnd="@drawable/ic_down_black"
                    android:gravity="center"
                    android:hint="@string/district_address"
                    android:inputType="text"
                    android:padding="15dp"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/etAddressStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:hint="@string/street_address"
                    android:inputType="text"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/etAddressBuildingNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:hint="@string/building_number_address"
                    android:inputType="text"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/etAddressFloorNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:hint="@string/floor_number_address"
                    android:inputType="text"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/etAddressApartmentNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:hint="@string/apartment_number_address"
                    android:inputType="text"
                    tools:ignore="Autofill,TextFields" />

                <Button
                    android:id="@+id/btnAddAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorAccent"
                    android:text="@string/add_address"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>