<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".Fragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:src="@drawable/logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:background="#ffffff"
                        android:gravity="center"
                        android:text="Login"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/btnRegister"
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:background="@color/colorButton"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textColor="#fff"
                        android:textSize="16sp" />


                </LinearLayout>

            </RelativeLayout>

            <EditText
                android:id="@+id/etFirstNameReg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/registerFirstName"
                android:padding="10dp"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etLastNameReg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:inputType="text"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/registerLastName"
                android:padding="10dp"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmailReg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/registerEmail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/registerPassword"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etConfirmPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/registerConfirmPassword"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPhoneReg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/registerPhone"
                android:padding="10dp"
                android:inputType="phone"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="BirthDay" />

                <TextView
                    android:id="@+id/tvDateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/buttonshape"
                    android:text="@string/selectDate"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/RegisterPickGender" />

                <RadioGroup
                    android:id="@+id/rvGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/rdMale"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="50dp"
                        android:text="Female" />

                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                android:background="@color/colorButton"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/privacy"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>